# recsync

client/: .gitignore
client/demoApp/Db/: Makefile  archive.db  archive_bugtest.db  somerecords.db  test_base.db  test_remove_alias.db  test_remove_channel.db  test_remove_infotag.db
client/demoApp/src/: demoMain.cpp
client/iocBoot/iocdemo/: st.cmd  st_base.cmd  st_bugtest.cmd  st_remove_alias.cmd  st_remove_channel.cmd  st_remove_infotag_after.cmd
server/: .gitignore  Dockerfile  cf-test-aa.yml  cf-test.yml  cf1.conf  demo.md  docker-compose.yml  pyproject.toml  test.py
server/docker/: cf-compose.yml  test-multi-recc.yml  test-single-ioc.yml
server/docker/archappl/conf/: appliances.xml  archappl.properties  policies.py  singleappliances.xml
server/docker/archappl/conf/sql/: create_db.sql
server/docker/archappl/copy_conf/: server.xml
server/docker/cf/: Dockerfile
server/recceiver/: announce.py  application.py  cfstore.py  dbstore.py  interfaces.py  processors.py  recast.py
server/recceiver/scripts/: add_extra_properties.py  print_cf_data.py  readme
server/tests/: client_checks.py  docker.py  test_bash_ioc.py  test_bug.py  test_e2e.py  test_multiple_recceiver.py  test_single_ioc.py
server/tests/unit/: test_cfstore_locking.py  test_ioc_not_in_list_reproduction.py
